--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token": "NjYwNTk5ODk1OTIwNzM4MzU0.XgfNsw.FSz8hB7MNnym4qZSqLxPVMgm2gI",
+"token": "[token]",
 "prefix": ",",
 "owner": "431791835300626443",
 "status": ",",
