--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "bot.js",
   "dependencies": {
+    "@discordjs/uws": "^10.149.0",
     "@pm2/io": "^4.3.3",
     "async": "^2.6.3",
     "asyncio": "0.0.2",
@@ -17,13 +18,14 @@
     "google-images": "^2.1.0",
     "hoek": "^5.0.4",
     "lodash": "^4.17.15",
+    "ms": "^2.1.2",
     "node-cmd": "^3.0.0",
     "node-fetch": "^2.6.0",
     "node-gyp": "^4.0.0",
     "npm": "^6.13.4",
+    "os": "^0.1.1",
     "parse-time": "^0.1.4",
     "pm2": "^3.5.2",
-    "random-puppy": "^1.1.0",
     "readline": "^1.3.0",
     "rebuild": "^0.1.2",
     "shelljs": "^0.8.3",
